--- a/Video/android/src/main/res/layout/activity_video.xml
+++ b/Video/android/src/main/res/layout/activity_video.xml
@@ -43,7 +43,7 @@
             android:src="@drawable/ic_mic_white_24dp" />
 
         <android.support.design.widget.FloatingActionButton
-            android:id="@+id/connect_action_fab"
+            android:id="@+id/mic_action_fab"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="@dimen/fab_margin"
