--- a/Video/android/src/main/res/layout/content_video.xml
+++ b/Video/android/src/main/res/layout/content_video.xml
@@ -32,6 +32,15 @@
         android:orientation="vertical"
         android:layout_gravity="bottom">
 
+        <android.support.design.widget.FloatingActionButton
+            android:id="@+id/connect_action_fab"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_margin="@dimen/fab_margin"
+            android:background="#ff4949"
+            app:fabSize="normal"
+            android:src="@drawable/ic_call_end_white_24px" />
         <TextView
             android:id="@+id/video_status_textview"
             android:layout_width="wrap_content"
