--- a/Video/android/src/main/res/layout/activity_video.xml
+++ b/Video/android/src/main/res/layout/activity_video.xml
@@ -21,7 +21,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            app:fabSize="normal"
+            app:fabSize="mini"
             android:layout_marginBottom="@dimen/fab_margin"
             android:src="@drawable/ic_switch_camera_white_24dp" />
 
@@ -31,14 +31,14 @@
             android:layout_height="wrap_content"
             android:layout_marginBottom="@dimen/fab_margin"
             android:layout_gravity="center"
-            app:fabSize="normal"
+            app:fabSize="mini"
             android:src="@drawable/ic_videocam_white_24dp" />
 
         <android.support.design.widget.FloatingActionButton
             android:id="@+id/mute_action_fab"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            app:fabSize="normal"
+            app:fabSize="mini"
             android:layout_gravity="center"
             android:src="@drawable/ic_mic_white_24dp" />
 
@@ -47,7 +47,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="@dimen/fab_margin"
-            app:fabSize="normal"
+            app:fabSize="mini"
             android:src="@drawable/ic_volume_up_white_24dp" />
 
     </LinearLayout>
